# A-Maze-ing

./: .flake8  .gitignore  LICENSE.md  Makefile  README.md  a_maze_ing.py  config.txt  main.py  maze.txt  maze_analyzer.py  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
maze_generator/: MazeGenerator.py  __init__.py  backtracking.py  braid.py  generate_maze.py  wall_expand.py
maze_generator/utils/: __init__.py  maze_solver.py  patterns.py
maze_solver/: MazeSolver.py
parser/: __init__.py  parse.py
src/mazegen/: __init__.py
src/mazegen/maze_generator/: MazeGenerator.py  __init__.py  backtracking.py  braided.py  wall_expand.py
src/mazegen/maze_generator/utils/: __init__.py  directions.py  patterns.py
src/mazegen/maze_solver/: MazeSolver.py  __init__.py
src/mazegen/maze_visualizer/: MazeVisualizer.py  __init__.py
src/mazegen/parser/: __init__.py  parse.py
src/mazegen/utils/: __init__.py  directions.py  maze_io.py  patterns.py
src/mazegen/visualizer/: MazeVisualizer.py
