[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazegen"
version = "1.0.0"
description = "42 A-Maze-ing Project - Reusable Maze Generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "tsadamor", email = "tsadamor@student.42tokyo.jp" },
    { name = "hfujisad", email = "hfujisad@student.42tokyo.jp" }
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
a_maze_ing = "a_maze_ing:main"

[tool.hatch.build.targets.sdist]
include = [
  "a_maze_ing.py",
  "src/mazegen",
]
exclude = [
  "venv",
  "__pycache__",
  "*.txt",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy"
]

[tool.mypy]
exclude = [
    '^venv/',
    '^\.venv/',
]
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
